commit messages and/or the pull requests.

OCMock 3.8 (unreleased)

* Added support for ARM-based Macs.
* Stubs can now fulfill XCTest expectations. This requires OCMock to link
  against XCTest; except on watchOS where it's not supported. (Dave MacLachlan)
* Added two new stub actions to help with debugging. (Dave MacLachlan)
* Classes can block OCMock from creating mocks. (Dave MacLachlan)
* Various bug-fixes and improvements to developer experience.


OCMock 3.7.1 (2020-07-26)

* Fixed a bug that caused double-counting of method invocations on partial
  mocks under certain circumstances.


OCMock 3.7 (2020-07-15)

* Fixed mocking init methods when using ARC. This worked before but could
  result in memory related crashes. (Dave MacLachlan)
* Added support for non-escaping blocks. (Dave MacLachlan)
* Numerous bug-fixes and improvements to developer experience, e.g. clearer
  error messages. (Dave MacLachlan)


OCMock 3.6 (2020-02-16)

* Added support for quantifiers. Please see documentation section 3.3 as well
  as #302 for details
* Added preprocessor macros to disable short syntax (in case of clashes). See
  section 9.6. for details.
* Set up dependency management with Carthage. This means that in order to 
  build OCMock from source you must have Carthage installed on your system.
  See https://github.com/Carthage/Carthage for details. You do not need to have
  Carthage installed to use OCMock, and if you want to use OCHamcrest with 
  OCMock you must make OCHamcrest available in your project, using whatever 
  dependency management system you use for your project.
* Added description of mock object to the exception that is thrown when the
  mock is used after stopMocking was called (Chaoshuai Lu)
  

OCMock 3.5 (2019-11-17)

* Added macro to tell the mock to ignore non-object arguments (Yura Samsoniuk)
* Added checks, which throw an expection if no interaction happens with a
  mock object inside the stub/expect/reject/verify macros. This helps in cases